--- a/project_site/templates/project_site/project_site_detail_view.html
+++ b/project_site/templates/project_site/project_site_detail_view.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="edit-button-style">
-          <a href="#" class="edit_project_site"
+          <a href="{% url 'project_site:project_site_edit_form' project_site.pk %}" class="edit_project_site"
             ><b>Edit </b></a>
         </div>
       </div>
