--- a/accounts/templates/accounts/customer_accounts_list_view.html
+++ b/accounts/templates/accounts/customer_accounts_list_view.html
@@ -1,51 +1,53 @@
-
 {% extends 'header.html' %}
 {% load static %}
-
+ 
 {% block title %}Account List{% endblock %}
-
+ 
 {% block extracss %}
     <link rel="stylesheet" href="{% static 'accounts/css/customer_accounts_list_view.css' %}">
 {% endblock %}
-
+ 
 {% block content %}
   <!-- testing -->
-
+ 
   <div class="recent_navbar_box">
-
+ 
     <div class="recent_navbar_box_upper">
       <img class="project_icon_logo" src="{% static 'accounts/images/account_icon.png' %}" alt="Image not Found">
       <label for="">Accounts</label><br>
       <label style="font-size: larger;" for=""><b>Recently Viewed</b></label>
       <!-- <a  href="selection_window.html" class="new_project_button" ><b>New</b></a> -->
-
+ 
       <button class="new_project_button" onclick="openPopup_selection_account()"><b>New </b></button>
-
+ 
       <!-- <button href="selection_window.html" class="new_project_button" onclick="openPopup_selection()" ><b>New</b></button> -->
-
+ 
       <input class="recent_search" type="search" name="" id="" placeholder="  Search">
     </div>
-
-
+ 
+ 
   </div>
-
-
-
-
+ 
+ 
+ 
+ 
   <style>
-
+ 
 {% comment %} css start {% endcomment %}
-
+ 
 *{
   font-family: Arial, Helvetica, sans-serif;
 }
-
+ {% comment %} .recent_navbar_box_upper{
+  position: fixed;
+}  {% endcomment %}
+ 
 .recent_navbar_box {
   width: 100%;
   border-radius: 10px;
-  
+ 
 }
-
+ 
 .project_icon_logo {
   background-color: #d12222;
   border-radius: 2px;
@@ -55,7 +57,7 @@
   margin: 5px;
   margin-right: 10px;
 }
-
+ 
 .recent_navbar_box_upper {
   height: 80px;
   width: auto;
@@ -63,7 +65,7 @@
   padding: 5px;
   border-radius: 10px;
 }
-
+ 
 .recent_navbar_box_upper .recent_search{
   float: right;
   border-radius: 5px;
@@ -72,12 +74,12 @@
   margin-right: 1%;
   padding: 5px;
 }
-
+ 
 .recent_search:focus{
       outline: none; /* Remove default outline */
       box-shadow: 0 0 10px #d1a2a2;  
 }
-
+ 
 .new_project_button{
   float: right;
   background-color: white;
@@ -86,17 +88,17 @@
   padding: 5px 15px;
   text-decoration: none;
   border:1px solid #d12222;
-  
+ 
 }
-
+ 
 .new_project_button:hover{
 background-color: #d12222;
 color: white;
 }
-
-
+ 
+ 
 /* selection popup form start */
-
+ 
 .selection_window_account {
   display: none;
   position: fixed;
@@ -112,7 +114,7 @@ color: white;
   max-height: 80%;
   overflow-y: auto;/* Enable vertical scrollbar when content exceeds the maximum height */
 }
-
+ 
 .selection_window_account_overlay {
   display: none;
   position: fixed;
@@ -123,7 +125,7 @@ color: white;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 9998;
 }
-
+ 
 .cross {
   color: #aaa;
   float: right;
@@ -132,187 +134,171 @@ color: white;
   cursor: pointer;
   text-decoration: none;
 }
-
+ 
 .cross:hover,
 .cross:focus {
   color: #e90909;
   text-decoration: none;
   cursor: pointer;
 }
-
+ 
 .account_information_box  {
   margin-left: 30%;    
 }
-
-
-
-.selection_window_account .Submit_buttons {
+ 
+ 
+ 
+.Submit_buttons {
   background-color: rgb(161, 155, 155);
   color: white;
   border-radius: 3px;
   border: none;
   padding: 10px 15px;
   text-decoration: none;
+ 
 }
-
+ 
 .selection_window_account .Submit_buttons:hover{
   background-color: rgb(128, 125, 125);
 }
-
+ 
 .selection_window_account .Submit_buttons_box {
   text-align: right;
+  display: flex;
+  float: right;
+  gap: 2px;
 }
-
-
-{% comment %} css end {% endcomment %}
-
-.account_page_table,
-    thead,
-    tr,
-    td {
-      border-top: 1px solid gray;
-      border-bottom: 1px solid gray;
-      margin-top: 2%;
-     
+ 
+ 
+{% comment %} table CSS {% endcomment %}
+    .this_page_table
+    {
+      border-block: 1px solid rgba(128, 128, 128, 0.685);
+      width: 100%;
+      border-collapse: collapse;
+   
+    }
+   
+    .table-head-style{
+        background-color: #e8eaec;
+        border: 1px solid rgba(128, 128, 128, 0.685);
+        height: 30px;
+    }
+    .table-head-col-style{
+        border: 1px solid rgba(128, 128, 128, 0.685);
+        text-align: left;
+        padding-left:3px;
+    }
+   
+    .table-head-col-style:hover{
+        background-color: rgba(201, 201, 201, 0.76);
+        color: rgba(0, 0, 0, 0.795);
+    }
+   
+    .table-row-style{
+        height: 0.1rem;
+        border-block: 1px solid rgba(128, 128, 128, 0.685);
+        padding-block: 1px;
+    }
+   
+    .body-row-col-style{
+        padding-left: 3px;
+        padding-top: 0.5%;
+    }
+    .table-row-style:hover{
+        background-color: rgba(201, 201, 201, 0.171);
+        border-block: 1px groove rgba(182, 181, 181, 0.753);
+        /*height: 0.9rem;*/
+        padding: 0px;
+   
     }
  
-    .account_page_table tr:hover {
-      background-color: #f2f2f2;
-    }
- 
-    .account_page_table .table_headers {
-      width: 400px;
-    }
- 
-    .account_page_table .table_last_headers{
-      width: 56%;
-    }
- 
-    .account_page_table a {
+    .a-tag-style-remove{
       text-decoration: none;
-    }
+      color: rgb(3, 0, 187);
+      font-size: medium;
+  }
+   
   </style>
+ 
+ 
+ 
   <div>
-    <table class="account_page_table">
-      <thead class="account_page_tabe_head">
-        <td class=""> S No.</td>
-        <td class="table_headers">&nbsp&nbsp&nbsp <b>Accounts</b></td>
-        <td class="table_headers"><b>Owner</b></td>
-        <td class="table_last_headers"><b>Phone Number</b></td>
- 
+    <table class="this_page_table">
+      <thead class="table-head-style">
+          <tr>
+              <th class="table-head-col-style"> S No.</th>
+              <th class="table-head-col-style"> Accounts</th>
+              <th class="table-head-col-style">Owner</th>
+              <th class="table-head-col-style">Phone Number</th>
+           
+          </tr>
       </thead>
-      {% for account in accounts %}
-      <tr class="account_page_tabe_row">
-        <td>&nbsp&nbsp&nbsp {{ forloop.counter }}</td>
-        <td><a href="{% url 'accounts:customer_account_detail_view' account.id %}">&nbsp&nbsp&nbsp {{ account.ca_name }}</a></td>
-        <td>{{ account.ca_account_owner }}</td>
-        <td>{{ account.ca_phone_number }}</td>
-      </tr>
-      {% endfor %}
-      {% comment %} <tr>
-        <td>&nbsp&nbsp&nbsp 2</td>
-        <td><a href="">&nbsp&nbsp&nbsp Cognizant</a></td>
-      </tr>
-      <tr>
-        <td>&nbsp&nbsp&nbsp 3</td>
-        <td><a href="">&nbsp&nbsp&nbsp Wipro</a></td>
-      </tr>
-      <tr>
-        <td>&nbsp&nbsp&nbsp 4</td>
-        <td><a href="">&nbsp&nbsp&nbsp TCS</a></td>
-      </tr>
-      <tr>
-        <td>&nbsp</td>
-        <td>&nbsp</td>
-      </tr>
-      <tr>
-        <td>&nbsp</td>
-        <td>&nbsp</td>
-      </tr>
-      <tr>
-        <td>&nbsp</td>
-        <td>&nbsp</td>
-      </tr>
-      <tr>
-        <td>&nbsp</td>
-        <td>&nbsp</td>
-      </tr>
-      <tr>
-        <td>&nbsp</td>
-        <td>&nbsp</td>
-      </tr>
-      <tr>
-        <td>&nbsp</td>
-        <td>&nbsp</td>
-      </tr>
-      <tr>
-        <td>&nbsp</td>
-        <td>&nbsp</td>
-      </tr>
-      <tr>
-        <td>&nbsp</td>
-        <td>&nbsp</td>
-      </tr>
-      <tr>
-        <td>&nbsp</td>
-        <td>&nbsp</td>
-      </tr>
-      <tr>
-        <td>&nbsp</td>
-        <td>&nbsp</td>
-      </tr>
-      <tr>
-        <td>&nbsp</td>
-        <td>&nbsp</td>
-      </tr>
-      <tr>
-        <td>&nbsp</td>
-        <td>&nbsp</td>
-      </tr> {% endcomment %}
- 
+      <tbody class="table-body">
+        {% for account in accounts %}
+          <tr class="table-row-style">
+              <td class="body-row-col-style">{{ forloop.counter }}</td>
+              <td class="body-row-col-style"><a class="a-tag-style-remove" href="{% url 'accounts:customer_account_detail_view' account.id%}">{{ account.ca_name }}</a></td>
+              <td class="body-row-col-style">{{ account.ca_account_owner }}</td>
+              <td class="body-row-col-style">{{ account.ca_phone_number }}</td>
+             
+          </tr>
+          {% endfor %}
+          {% comment %} <tr class="table-row-style">
+              <td class="body-row-col-style">2</td>
+              <td class="body-row-col-style"><a class="a-tag-style-remove" href="#"></a></td>
+              <td class="body-row-col-style"></td>
+              <td class="body-row-col-style"></td>
+              <td class="body-row-col-style"></td>
+              <td class="body-row-col-style"><a class="a-tag-style-remove" href="#"></a></td>
+          </tr> {% endcomment %}
+      </tbody>
  
     </table>
   </div>
-
-
+ 
+ 
+ 
+ 
+ 
   <div id="selection_window_account" class="selection_window_account">
     <!-- <a  class="cross" >&times;</a> -->
     <h3>New Account</h3>
-
+ 
     <hr>
     <form method="post" action="{% url 'accounts:select_account_type' %}">
       {% csrf_token %}
       <h6>Select a record type</h6>
       <div class="account_information_box">
-
+ 
         <div class="account_information_box_input">
           <ul>
             <label><input type="radio" name="account_type" value="customer" checked> Customer</label> <br> <br>
             <label><input type="radio" name="account_type" value="vendor"> Vendor</label>
-
+ 
           </ul>
-
+ 
         </div>
-
+ 
         <div class="Submit_buttons_box">
           <a href="{% url 'accounts:customer_accounts_list_view' %}" class="Submit_buttons">Cancel</a>
           <button type="submit" class="Submit_buttons">Next</button>
         </div>
     </form>
-
+ 
   </div>
-
+ 
   <script src="{% static 'accounts/js/customer_accounts_list_view.js' %}"></script>
   <script src="../../Reusable_components/header/navbar.js"></script>
-
-
-
+ 
+ 
+ 
   <script>
     function nextform() {
       // Check if the customer radio button is selected
       if (document.getElementById("customer_form").checked) {
         window.location.href = "C_Accountpop.html";
-    
+   
       } else {
         // Handle if employee radio button is selected
         document.getElementById("vendor_form").checked;{
@@ -321,11 +307,11 @@ color: white;
         }
       }
     }
-    
+   
     </script>
-
-
-
-
-
+ 
+ 
+ 
+ 
+ 
 {% endblock %}
